# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: data.txt
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
results/: route
src/: build.py  data.txt  main.py  test_file_reader.py
src/UI/: UI.py
src/city/: city.py
src/data/: data.txt
src/fileio/: fileio.py
src/results/: route
src/solver/: solver.py
src/tests/: build_test.py  city_test.py  fileio_test.py  route_test.py
src/tests/testfiles/: test_data.txt  testresults
