[tool.poetry]
name = "TSP_solver"
version = "0.1.0"
description = "A solver for Traveling Salesman Problem"
authors = ["Mikko Pellinen <mikko.pellinen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
pygame = "^2.0.1"
matplotlib = "^3.4.1"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
