[tool.poetry]
name = "TSP_solver"
version = "0.1.0"
description = "A solver for Traveling Salesman Problem"
authors = ["Mikko Pellinen <mikko.pellinen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.5"
matplotlib = "^3.3.3"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
